ensure cards on mobile have figma aligned gap

--- a/express/code/blocks/discover-cards/discover-cards.css
+++ b/express/code/blocks/discover-cards/discover-cards.css
@@ -42,6 +42,9 @@ main .section .discover-cards {
   background: unset;
   border: none;
 }
+.discover-cards.more .cards-container .card.gallery--item {
+  margin-left: -9px;
+}
 .discover-cards .center-title {
     text-align: center;
 }
@@ -141,6 +144,10 @@ main .section .discover-cards {
     .discover-cards .cards-container .card:first-child {
         margin-left: 100px;
     }
+}
+
+.discover-cards.more .cards-container.gallery {
+  gap: 0;
 }
 
 .gallery {
